<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/course"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/course_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintStart_toStartOf="@+id/edit_course"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edit_course"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_long"
                android:layout_marginEnd="@dimen/spacing_long"
                android:hint="@string/required"
                android:inputType="text"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/course"
                tools:text="電磁気学" />

            <TextView
                android:id="@+id/teacher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_course"
                android:layout_marginTop="@dimen/spacing_short"
                android:text="@string/teacher"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintStart_toStartOf="@+id/edit_teacher"
                app:layout_constraintTop_toBottomOf="@+id/edit_course" />

            <EditText
                android:id="@+id/edit_teacher"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/teacher"
                android:inputType="text"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="@+id/edit_course"
                app:layout_constraintStart_toStartOf="@+id/edit_course"
                app:layout_constraintTop_toBottomOf="@+id/teacher"
                tools:text="ZZZ" />

            <TextView
                android:id="@+id/type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_teacher"
                android:layout_marginTop="@dimen/spacing_short"
                android:layout_toEndOf="@id/point"
                android:text="@string/type"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintStart_toStartOf="@+id/spinner_type"
                app:layout_constraintTop_toBottomOf="@+id/edit_teacher" />

            <Spinner
                android:id="@+id/spinner_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_long"
                app:layout_constraintBottom_toBottomOf="@+id/edit_point"
                app:layout_constraintEnd_toStartOf="@+id/edit_point"
                app:layout_constraintStart_toStartOf="@+id/edit_course"
                app:layout_constraintTop_toTopOf="@+id/edit_point" />

            <TextView
                android:id="@+id/point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_teacher"
                android:layout_marginTop="8dp"
                android:text="@string/point"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintStart_toStartOf="@+id/edit_point"
                app:layout_constraintTop_toBottomOf="@+id/edit_teacher" />

            <EditText
                android:id="@+id/edit_point"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_short"
                android:hint="@string/required"
                android:inputType="number"
                android:maxLength="2"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toStartOf="@+id/edit_grade"
                app:layout_constraintTop_toBottomOf="@+id/point" />

            <TextView
                android:id="@+id/grade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/grade"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintStart_toStartOf="@+id/edit_grade"
                app:layout_constraintTop_toBottomOf="@+id/edit_teacher" />

            <EditText
                android:id="@+id/edit_grade"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:hint="@string/required"
                android:inputType="number"
                android:maxLength="2"
                app:layout_constraintEnd_toEndOf="@+id/edit_course"
                app:layout_constraintTop_toBottomOf="@+id/grade" />

            <TextView
                android:id="@+id/textbook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_short"
                android:text="@string/textbook"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintStart_toStartOf="@+id/edit_book"
                app:layout_constraintTop_toBottomOf="@+id/spinner_type" />

            <TextView
                android:id="@+id/edit_book"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_short"
                android:inputType="none"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toStartOf="@+id/button_edit_book"
                app:layout_constraintStart_toStartOf="@+id/edit_course"
                app:layout_constraintTop_toBottomOf="@+id/textbook"
                tools:text="ああああああああああああああああああああああああああ" />

            <Button
                android:id="@+id/button_edit_book"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                app:layout_constraintBottom_toBottomOf="@+id/edit_book"
                app:layout_constraintEnd_toEndOf="@+id/edit_course"
                app:layout_constraintTop_toTopOf="@+id/edit_book" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_short"
                android:text="@string/email"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintStart_toStartOf="@+id/edit_email"
                app:layout_constraintTop_toBottomOf="@+id/edit_book" />

            <EditText
                android:id="@+id/edit_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="@+id/edit_course"
                app:layout_constraintStart_toStartOf="@+id/edit_course"
                app:layout_constraintTop_toBottomOf="@+id/email" />

            <TextView
                android:id="@+id/url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_short"
                android:text="@string/url"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintStart_toStartOf="@+id/edit_url"
                app:layout_constraintTop_toBottomOf="@+id/edit_email" />

            <EditText
                android:id="@+id/edit_url"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textUri"
                app:layout_constraintEnd_toEndOf="@+id/edit_course"
                app:layout_constraintStart_toStartOf="@+id/edit_course"
                app:layout_constraintTop_toBottomOf="@+id/url" />

            <EditText
                android:id="@+id/edit_additional"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:lines="5"
                app:layout_constraintEnd_toEndOf="@+id/edit_course"
                app:layout_constraintStart_toStartOf="@+id/edit_course"
                app:layout_constraintTop_toBottomOf="@+id/additional" />

            <TextView
                android:id="@+id/additional"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_short"
                android:text="@string/additional"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintStart_toStartOf="@+id/edit_additional"
                app:layout_constraintTop_toBottomOf="@+id/edit_url" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>