<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CampusSchedule</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="property">Property</string>
    <string name="add">Add</string>
    <string name="choose">Choose</string>
    <string name="apply">Apply</string>
    <string name="home">Home</string>
    <string name="required">Required</string>
    <string name="term_name">Term Name</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="term_start">Start</string>
    <string name="term_end">End</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="unselected_text">Unselected</string>
    <string name="term_setting">Term Setting</string>
    <string name="general_setting">General Setting</string>
    <string name="new_create">New Create</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="course">Courses</string>
    <string name="course_name">Course Name</string>
    <string name="teacher">Teacher</string>
    <string name="point">Points</string>
    <string name="grade">Grades</string>
    <string name="type">Type</string>
    <string name="email">E-mail</string>
    <string name="url">URL</string>
    <string name="textbook">Textbook</string>
    <string name="additional">Additional</string>
    <string name="table">Table</string>
    <string name="day_order">Period</string>
    <string name="list">List</string>
    <string name="setting_sat">Show Saturday</string>
    <string name="setting_order">Show Period</string>
    <string name="until">until</string>
    <string name="sum">Total</string>
    <string name="blank_message_term_name">Input a term name</string>
    <string name="blank_message_course_name">Input a course name</string>
    <string name="blank_message_type">Select a type</string>
    <string name="blank_message_point">Input a point</string>
    <string name="blank_message_grade">input a grade</string>
    <string name="message_choose_color">Choose Color</string>
    <string name="type_label_0">type01</string>
    <string name="type_label_1">type02</string>
    <string name="type_label_2">type03</string>
    <string name="type_label_3">type04</string>
    <string name="type_label_4">type05</string>
    <string name="confirm_message_delete">Are you sure you want to remove?</string>
    <string name="warning_message_input">Input Error</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="sort_order">Sort Order</string>
    <string name="operate_items">Operate Items</string>
    <string name="book_list">Book List</string>
    <string name="blank">Blank</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="publisher">Publisher</string>
    <string name="blank_message_booktitle">Input a book title</string>
    <string name="message_input_book_property">Input book data</string>
    <string name="search">Search</string>
    <string name="num_search_result">Number of search results:</string>
    <string name="on_website">>> On website</string>
    <string name="message_unknown_date">Unknown date</string>
    <string name="message_missing_description">Missing description</string>
    <string name="search_result">Search result</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="period_1st">1st</string>
    <string name="period_2nd">2nd</string>
    <string name="period_3rd">3rd</string>
    <string name="period_4th">4th</string>
    <string name="period_5th">5th</string>
    <string name="period_6th">6th</string>
    <string name="period_7th">7th</string>
    <string name="message_read_more">Read more</string>

</resources>