...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edit_file_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_mid"
        android:layout_marginTop="@dimen/spacing_mid"
        android:layout_marginEnd="@dimen/spacing_mid"
        android:ems="10"
...
